# morphyon

./: README.md  pyproject.toml  setup.py  test.py
morphyon/morphyon/: __init__.py
morphyon/morphyon/attributes/: attributes.py
morphyon/morphyon/components/: __init__.py  base.py  button.py
morphyon/morphyon/utils/: __init__.py
src/morphyon/: __init__.py
src/morphyon/attributes/: __init__.py
src/morphyon/components/: base.py  button.py  input.py  list.py
src/morphyon/styles/: Style.py  __init__.py
src/morphyon/utils/: helpers.py  html_builder.py
src/py2web/: __init__.py
src/py2web/components/: __init__.py  base.py  header.py
src/py2web/styles/: Style.py
src/py2web/utils/: __init__.py  html_builder.py
