[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py2web"
version = "0.0.1"
authors = [
  { name="Esteban Sierra Baccio", email="e.s.baccio@gmail.com" },
]
description = "collection of biblical humans and their family relations"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MariyaSha/humans"
Issues = "https://github.com/MariyaSha/humans"