[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morphyon"
version = "0.0.1"
authors = [
  { name="Esteban Sierra Baccio", email="e.s.baccio@gmail.com" },
]
description = "Python library for frontend development"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Pansocrates03/morphyon"
Issues = "https://github.com/Pansocrates03/morphyon"